--- a/informe/biblio.bib
+++ b/informe/biblio.bib
@@ -62,4 +62,83 @@
     year={2003},
     publisher={APS}
 }
+@article{he2006,
+    title={Why do hubs tend to be essential in protein networks?},
+    author={He, Xionglei and Zhang, Jianzhi},
+    journal={PLoS Genet},
+    volume={2},
+    number={6},
+    pages={e88},
+    year={2006},
+    publisher={Public Library of Science}
+}
+
+@article{jeong2000,
+    title={The large-scale organization of metabolic networks},
+    author={Jeong, Hawoong and Tombor, B{\'a}lint and Albert, R{\'e}ka and Oltvai, Zoltan N and Barab{\'a}si, A-L},
+    journal={Nature},
+    volume={407},
+    number={6804},
+    pages={651--654},
+    year={2000},
+    publisher={Nature Publishing Group}
+}
+
+@article{zotenko2008,
+    title={Why do hubs in the yeast protein interaction network tend to be essential: reexamining the connection between the network topology and essentiality},
+    author={Zotenko, Elena and Mestre, Julian and O'Leary, Dianne P and Przytycka, Teresa M},
+    journal={PLoS Comput Biol},
+    volume={4},
+    number={8},
+    pages={e1000140},
+    year={2008},
+    publisher={Public Library of Science}
+}
+
+@article{albert1999,
+    title={Internet: Diameter of the world-wide web},
+    author={Albert, R{\'e}ka and Jeong, Hawoong and Barab{\'a}si, Albert-L{\'a}szl{\'o}},
+    journal={Nature},
+    volume={401},
+    number={6749},
+    pages={130--131},
+    year={1999},
+    publisher={Nature Publishing Group}
+}
+
+
+@inproceedings{faloutsos1999,
+    title={On power-law relationships of the internet topology},
+    author={Faloutsos, Michalis and Faloutsos, Petros and Faloutsos, Christos},
+    booktitle={ACM SIGCOMM computer communication review},
+    volume={29},
+    number={4},
+    pages={251--262},
+    year={1999},
+    organization={ACM}
+}
+
+
+@article{kamath2003,
+    title={Systematic functional analysis of the Caenorhabditis elegans genome using RNAi},
+    author={Kamath, Ravi S and Fraser, Andrew G and Dong, Yan and Poulin, Gino and Durbin, Richard and Gotta, Monica and Kanapin, Alexander and Le Bot, Nathalie and Moreno, Sergio and Sohrmann, Marc and others},
+    journal={Nature},
+    volume={421},
+    number={6920},
+    pages={231--237},
+    year={2003},
+    publisher={Nature Publishing Group}
+}
+
+
+@article{winzeler1999,
+    title={Functional characterization of the S. cerevisiae genome by gene deletion and parallel analysis},
+    author={Winzeler, Elizabeth A and Shoemaker, Daniel D and Astromoff, Anna and Liang, Hong and Anderson, Keith and Andre, Bruno and Bangham, Rhonda and Benito, Rocio and Boeke, Jef D and Bussey, Howard and others},
+    journal={science},
+    volume={285},
+    number={5429},
+    pages={901--906},
+    year={1999},
+    publisher={American Association for the Advancement of Science}
+}
 
