--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -44,8 +44,16 @@
     %--- tabla de contenidos
     \tableofcontents
 
+    \newpage
     \input{intro}
 
+    \newpage
+    %\input{observables}
+    
+
+    %\input{jeong}
+
+    %\input{he}
 
 
 \bibliographystyle{plainnat}
