actualizacion de informe

--- a/informe/intro.tex
+++ b/informe/intro.tex
@@ -1,37 +1,37 @@
 \section{Introducci\'on}
-El modelo clasico de redes aleatorias de Erd\"os-R\`enyi asume que un par de 
+El modelo cl\'asico de redes aleatorias de Erd\"os-R\`enyi asume que un par de 
 nodos est\'an conectados con una probabilidad $p$, generando redes estadisticamente
-homogenias y distribuci\'on de grado tipo Poisson~\citep{jeong2000}. Sin embargo 
+homog\'eneas y distribuci\'on de grado tipo Poisson~\citep{jeong2000}. Sin embargo, 
 muchas redes complejas reales (como internet~\citep{faloutsos1999} o 
-redes metabolicas~\citep{jeong2000}) muestran comportamientos libre de 
+redes metab\'olicas~\citep{jeong2000}) muestran comportamientos libre de 
 escala, es decir, se caracterizan por tener pocos nodos altamente conectados 
 \textit{hubs} con nodos poco conectados.
 
-En el caso de redes biologicas, a trav\'es de tecnicas gen\'eticas, se ha 
+En el caso de redes biol\'ogicas, a trav\'es de t\'ecnicas gen\'eticas, se ha 
 demostrado la existencia de genes indispensables para la sobrevivencia (genes
 \textit{esenciales}) \citep{kamath2003,winzeler1999}. Desde entonces se ha 
-buscado una forma de caracterizar la escencialidad de un nodo en una red a 
-trav\'es de sus caracteristicas topologicas.
+buscado una forma de caracterizar la esencialidad de un nodo en una red a 
+trav\'es de sus caracter\'isticas topol\'ogicas.
 
-En \citet{jeong2000} se trabaja sobre 43 redes metabolicas y reporta una 
-correlaci\'on entre los hubs de la red y la escencialidad del nodo desde 
+En \citet{jeong2000} se trabaja sobre 43 redes metab\'olicas y reporta una 
+correlaci\'on entre los hubs de la red y la esencialidad del nodo desde 
 el punto de vista biol\'ogico. A esta correlaci\'on la llamaron 
 \textit{regla de Centralidad-Letalidad} (Centrality-Lethality rule) y 
-posteriormente a este trabajo ha sido reportada numerosas veces por otros 
-autores. La principal critica que ha resivido esta correlaci\'on es al ser
+posteriormente este trabajo ha sido reportado numerosas veces por otros 
+autores. La principal cr\'itica que ha recibido esta correlaci\'on es al ser
 considerada muchas veces como raz\'on causal, es por ello que en
-\citet{he2006} se planetea una aproximaci\'on distinta al problema, pero 
-con consecuencias equivalentes. En \citep{he2006} se establece que la
-escencialidad de un nodo (i.e. prote\'ina) se debe a la participaci\'on de 
-este en una interacci\'on/proceso (conexiones) escencial, luego debido 
-a que los hubs tienen una alta conectividad, con otros nodos, es m\'as 
-probable una de sus interacciones sea escencial.
+\citet{he2006} se plantea una aproximaci\'on distinta al problema, pero 
+con consecuencias equivalentes. En \citet{he2006} se establece que la
+esencialidad de un nodo (i.e. prote\'ina) se debe a la participaci\'on de 
+este en una interacci\'on/proceso (conexiones) esencial, luego debido 
+a que los hubs tienen una alta conectividad con otros nodos, es m\'as 
+probable que una de sus interacciones sea esencial.
 
 
-El presente trabajo es una revisi\'on del trabajo de \citet{zotenko2008} en que 
-se estudia las debilidades de las hipotesis de Jeong y He. Para ello utilizamos
+El presente estudio es una revisi\'on del trabajo de \citet{zotenko2008} en que 
+se estudia las debilidades de las hip\'otesis de Jeong y He. Para ello utilizamos
 cuatro redes proteicas de levadura (\textit{S. cerevisiae}): Obtenida a partir 
 de Affinity-Purification/Mass-Spectrometry (AP-MS) \citep{apms_data}, de 
 interacciones binarias yeast two-hybrid (Y2H) \citep{y2h_data} y dos curadas 
 de literatura \citep{lit_data} {\bf (FALTA UNA CITA AQUI)}. Los datos para 
-contruir las redes fueron obtenidos de la \textit{Yeast Interactome Database}\footnote{http://interactome.dfci.harvard.edu/S\_cerevisiae/}
+construir las redes fueron obtenidos de la \textit{Yeast Interactome Database}.
