--- a/informe/biblio.bib
+++ b/informe/biblio.bib
@@ -112,7 +112,6 @@
     author={Faloutsos, Michalis and Faloutsos, Petros and Faloutsos, Christos},
     booktitle={ACM SIGCOMM computer communication review},
     volume={29},
-    number={4},
     pages={251--262},
     year={1999},
     organization={ACM}
@@ -140,5 +139,36 @@
     pages={901--906},
     year={1999},
     publisher={American Association for the Advancement of Science}
+}
+
+@article{yu2004,
+    title={Genomic analysis of essentiality within protein networks},
+    author={Yu, Haiyuan and Greenbaum, Dov and Lu, Hao Xin and Zhu, Xiaowei and Gerstein, Mark},
+    journal={TRENDS in Genetics},
+    volume={20},
+    number={6},
+    pages={227--231},
+    year={2004},
+    publisher={Elsevier}
+}
+@article{hahn2005,
+    title={Comparative genomics of centrality and essentiality in three eukaryotic protein-interaction networks},
+    author={Hahn, Matthew W and Kern, Andrew D},
+    journal={Molecular biology and evolution},
+    volume={22},
+    number={4},
+    pages={803--806},
+    year={2005},
+    publisher={SMBE}
+}
+@article{wuchty2002,
+    title={Interaction and domain networks of yeast},
+    author={Wuchty, Stefan},
+    journal={Proteomics},
+    volume={2},
+    number={12},
+    pages={1715--1723},
+    year={2002},
+    publisher={Citeseer}
 }
 
