--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -49,14 +49,14 @@
 
     \newpage
     \input{caracterizacion}
-
+    \input{centrality-lethality}
     \newpage
     \input{seba}
     
 
     %\input{jeong}
 
-    %\input{he}
+    \input{he}
 
 
 \bibliographystyle{plainnat}
