modificaciones de estilo

--- a/informe/caracterizacion.tex
+++ b/informe/caracterizacion.tex
@@ -41,7 +41,7 @@ Es importante notar que debido a las diversas t\'ecnicas de construcci\'on de la
     \centering
     \caption{\label{tab:obs}Observables para las cuatro redes de interacci\'on proteica de levadura.}
     {\scriptsize
-    \begin{tabularx}{1\columnwidth}{XlX|XXXXXX}
+    \begin{tabularx}{1\columnwidth}{XlX|XccccX}
         \hline\hline
         &\multirow{2}{*}{Observables}        &&& \multirow{2}{*}{AP-MS} & \multirow{2}{*}{LIT} & \multirow{2}{*}{Y2H} & \multirow{2}{*}{LIT\_Reguly} &\\ 
         &&&&&&\\
