--- a/informe/centrality-lethality.tex
+++ b/informe/centrality-lethality.tex
@@ -1,4 +1,4 @@
-\section{Regla de Centralidad-Letalidad}
+\section{Regla de Centralidad-Letalidad \citep{jeong2000}\label{sec:jeong}}
 En el trabajo de de \citet{jeong2000} se establece una correlaci\'on entre esencialidad y los hubs de una red metab\'olica. 
 Esta correlaci\'on ha sido llamada \textit{Regla de Centralidad-Letalidad} y ha sido reportada en otros trabajos 
 citep{yu2004,winzeler1999,wuchty2002}. En \citet{jeong2000} se explora la posibilidad de estimar la esencialidad de un
