arreglando la tabla

--- a/informe/he.tex
+++ b/informe/he.tex
@@ -84,16 +84,16 @@ y simulaciones.}
     \caption{\label{tab:pairs} Cantidad de pares totales o de igual caracteristica (ambos esenciales o ambos no esenciale)
     en comparaci\'on al valor estimado desprendido de la hipotesis de \citet{he2006}.}
     {\scriptsize
-    \begin{tabularx}{.9\columnwidth}{XlccccX}
+    \begin{tabularx}{.9\columnwidth}{XlcccX}
         \hline\hline
-        &               & Pares   & Pares del   & \multicolumn{2}{c}{Pares esperados del mismo tipo }             \\ 
+        &               & Pares   & Pares del   & Pares esperados del       \\ 
         \cline{5-6}
-        &               & Totales & mismo tipo  & Simulaci\'on  &        Ajuste         &      \\
+        &               & Totales & mismo tipo  & mismo tipo por ajuste        &      \\
         \hline
- %       & AP-MS         & 11613 & 5924 & &  &            \\ 
-        & LIT\_Reguly   & 10777   & 6187        &               &         5716          &               \\
-        & LIT           & 1858    & 1059        &               &          963          &               \\
-        & Y2H           & 2258    & 1493        &               &                       &               \\
+ %       & AP-MS         & 11613 & 5924 & &  &   
+        & LIT\_Reguly   & 10777   & 6187        &         5716          &               \\
+        & LIT           & 1858    & 1059        &          963          &               \\
+        & Y2H           & 2258    & 1493        &                       &               \\
         \hline\hline
     \end{tabularx}
     }
